Add in image and reposition heading. Also edit the About me

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: DoubleOSeven Codes
-email: ansari.yumna@gmail.com
+email: 
 description: > # this means to ignore newlines until "baseurl:"
  Welcome to my codeing challenges page! Feel free to look around. 
 baseurl: "" # the subpath of your site, e.g. /blog
