--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://DoubleOSeven.github.io" # the base hostname & protocol for your site
 twitter_username: 007_78
 github_username:  DoubleOSeven
+future: true
 
 # Build settings
 markdown: kramdown
