--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@
 
 # Site settings
 title: DoubleOSeven Codes
-email: 
+email:
 description: > # this means to ignore newlines until "baseurl:"
- Welcome to my 180 code challenges page! Feel free to look around. 
+ Welcome to my 180 code challenges page! Feel free to look around.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://DoubleOSeven.github.io" # the base hostname & protocol for your site
 twitter_username: 007_78
@@ -18,3 +18,4 @@ future: true
 
 # Build settings
 markdown: kramdown
+highlighter: rouge
